<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_launcher_name">Vian Launcher</string>
    <string name="all_apps">All apps</string>
    <string name="play_store">Play Store</string>
    <string name="hidden_apps">Hidden apps</string>
    <string name="launcher_settings">Launcher Settings</string>
    <string name="app_info">App info</string>
    <string name="touch_hold_widget">Long press the widget and drag it on your home screen</string>
    <string name="uninstall">Uninstall</string>
    <string name="hide_icon">Hide icon</string>
    <string name="add_hidden_icons">Add hidden icons</string>
    <string name="manage_hidden_icons">Manage hidden icons</string>
    <string name="hidden_icons">Hidden icons</string>
    <string name="hidden_icons_placeholder">Some apps cannot be uninstalled due to system restrictions, but you can at least hide their icons to avoid seeing them.</string>
    <string name="app_logs">App logs</string>
    <string name="view_app_logs">View app logs</string>
    <string name="share_logs">Share logs</string>
    <string name="clear_logs">Clear logs</string>
    <string name="logs_cleared">Logs cleared</string>
    <string name="no_logs_yet">No logs yet</string>
    <string name="app_drawer_settings">App drawer</string>
    <string name="close_app_drawer_on_app_open">Close app drawer on opening an app</string>
    <string name="auto_show_keyboard_in_app_drawer">Automatically show keyboard in drawer</string>
    <string name="show_app_labels">Show app labels</string>
    <string name="home_screen_settings">Home screen</string>
    <string name="widget_too_big">Widget is too big for current home screen size</string>
    <string name="double_tap_to_lock">Double tap to lock screen</string>
    <string name="lock_device_admin_hint">To enable the double tap to lock screen feature, you need to grant admin permission. Note that the app cannot be uninstalled until this permission is removed.</string>
    <string name="lock_device_admin_warning">Deactivating admin permission will disable the double tap to lock screen feature.</string>
    <string name="clock">Clock</string>
    <string name="clock_widget_title">Digital Clock (5x2)</string>
    <string name="dock_column_count">Dock column count</string>
    <string name="pin_to_home">Pin to home screen</string>
    <string name="shortcut_pinned">Shortcut pinned to home screen</string>
    <string name="cannot_create_shortcut">Cannot create shortcut from this application</string>
    <string name="set_as_default_to_enable_shortcuts">Set Vian as default launcher to enable app shortcuts</string>
    <string name="set_default">Set default</string>
    <string name="unlock_app_title">Unlock %1$s</string>
    <string name="unlock_app_subtitle">Verify your identity to open this application</string>
    <string name="lock_app">Lock app</string>
    <string name="unlock_app">Unlock app</string>
    <string name="app_locked">App locked</string>
    <string name="app_unlocked">App unlocked</string>
    <string name="app_lock">App Lock</string>
    <string name="app_lock_description">Protect apps behind biometric unlock or device PIN</string>
    <string name="enable_app_lock">Enable App Lock</string>
    <string name="app_lock_timeout">Relock timeout</string>
    <string name="timeout_immediately">Immediately</string>
    <string name="timeout_1_min">After 1 minute</string>
    <string name="timeout_5_min">After 5 minutes</string>
    <string name="timeout_screen_off">When screen turns off</string>
    <string name="manage_locked_apps">Manage locked apps</string>
    <string name="no_apps_locked">No apps currently locked</string>
    <string name="protect_hidden_apps">Protect hidden apps</string>
    <string name="protect_hidden_apps_desc">Require authentication to open hidden apps</string>
    <string name="select_apps_to_lock">Select apps to lock</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_time">Sort by time</string>
    <string name="add">Add</string>
    <string name="add_to_home">Add to home</string>
    <string name="app">App</string>
    <string name="widget">Widget</string>
    <string name="shortcut">Shortcut</string>
    <string name="folder">Folder</string>
    <string name="page">Page</string>
    <string name="select_app">Select app</string>
    <string name="select_shortcut">Select shortcut</string>
    <string name="create_folder">Create folder</string>
    <string name="folder_name">Folder name</string>
    <string name="page_added">Page added</string>
    <string name="folder_created">Folder created</string>
    <string name="app_added_to_home">\"%1$s\" added to home screen</string>
    <string name="no_shortcuts_available">No shortcut providers available</string>
    <string name="change_icon">Change icon</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="choose_from_apps">Choose from installed apps</string>
    <string name="reset_to_default_icon">Reset to default icon</string>
    <string name="edit_item">Edit</string>
    <string name="tap_to_change_icon">Tap icon to change</string>
    <string name="search_apps">Search apps</string>
    <string name="log_keeper">Log Keeper</string>
    <string name="copy_logs">Copy logs</string>
    <string name="download_logs">Download logs</string>
    <string name="logs_copied">Logs copied to clipboard</string>
    <string name="logs_dumped">Saved to Download/vian logs.txt</string>
    <string name="log_filter_6h">6h</string>
    <string name="log_filter_12h">12h</string>
    <string name="log_filter_24h">24h</string>
    <string name="log_filter_all">All</string>
    <string name="no_logs_found">No logs found for this period</string>
    <string name="log_keeper_disabled_hint">Logging is currently disabled. Toggle the switch above to enable.</string>
    <string name="logging_enabled">Logging enabled</string>
    <string name="logging_disabled">Logging disabled</string>
    <string name="volume_muted">Media volume muted</string>
    <string name="volume_unmuted">Media volume unmuted</string>
    <string name="ringer_mode_vibrate">Ringer set to vibrate</string>
    <string name="ringer_mode_normal">Ringer set to normal</string>
    <string name="action_lock_screen">Lock screen</string>
    <string name="action_mute_volume">Mute media volume</string>
    <string name="action_mute_ringtone">Mute ringtone</string>
    <string name="action_notifications">Notification panel</string>
    <string name="action_quick_settings">Quick settings</string>
    <string name="action_app_drawer">App drawer</string>
    <string name="action_folder_popup">Open folder popup</string>
    <string name="action_app_shortcuts">App shortcuts</string>
    <string name="action_launch_app">Launch app</string>
    <string name="action_popup_widget">Popup widget</string>
    <string name="action_add_to_home">Add to home</string>
    <string name="action_add_app">Add application</string>
    <string name="action_add_widget">Add desktop widget</string>
    <string name="action_none">None</string>
    <string name="add_to_home_title">Add to Home Screen</string>
    <string name="add_to_home_subtitle">Choose an element to add to your grid</string>
    <string name="element_apps">Applications</string>
    <string name="element_apps_desc">Select from installed apps</string>
    <string name="element_desktop_widgets">Desktop Widgets</string>
    <string name="element_desktop_widgets_desc">Multi-cell widgets for home pages</string>
    <string name="element_popup_widgets">Popup Widgets</string>
    <string name="element_popup_widgets_desc">Compact 1-cell shutter opening on tap</string>
    <string name="element_shortcuts">Shortcuts</string>
    <string name="element_shortcuts_desc">Pinned tasks and deep-link actions</string>
    <string name="element_folders">Folders</string>
    <string name="element_folders_desc">Group multiple applications together</string>
    <string name="popup_widget_added_to_home">Popup widget added to home screen</string>
    <string name="popup_widget">Popup widget</string>
    <string name="link_widget">Link widget</string>
    <string name="unlink_widget">Unlink widget</string>
    <string name="change_widget">Change widget</string>
    <string name="widget_linked">Widget linked</string>
    <string name="widget_unlinked">Widget unlinked</string>
    <string name="select_widget">Select widget</string>
    <string name="select_widget_to_link">Link a widget to %s</string>
    <string name="no_widgets_available">No widgets available</string>
    <string name="no_widgets_for_app">No widgets found for this app</string>
    <string name="show_all_widgets">Show all widgets</string>
    <string name="widgets_from_app">Widgets from %s</string>
    <string name="reconfigure_widget">Reconfigure widget</string>
    <string name="search_widgets">Search widgets</string>
    <string name="gestures_and_actions">Gestures &amp; actions</string>
    <string name="gestures_and_actions_desc">Configure home screen gestures, item actions, and folder behavior</string>
    <string name="home_screen_gestures">Home screen gestures</string>
    <string name="home_screen_gestures_desc">Actions when gesturing on empty home screen areas</string>
    <string name="gesture_double_tap">Double tap</string>
    <string name="gesture_swipe_down">Swipe down</string>
    <string name="gesture_swipe_up">Swipe up</string>
    <string name="gesture_swipe_left">Swipe left</string>
    <string name="gesture_swipe_right">Swipe right</string>
    <string name="gesture_pinch_in">Pinch in</string>
    <string name="folder_cover_mode">Folder cover mode</string>
    <string name="folder_cover_mode_desc">Tap folder to open first app, swipe up or double tap to open folder</string>
    <string name="gesture_haptics">Haptic feedback</string>
    <string name="gesture_haptics_desc">Vibrate when a gesture action triggers</string>
    <string name="item_gestures_title">Item gestures</string>
    <string name="item_gestures_subtitle">Override actions for this specific item</string>
    <string name="linked_popup_widget_title">Linked popup widget</string>
    <string name="no_popup_widget_linked">No popup widget linked</string>
    <string name="select_action">Select action</string>
    <string name="choose_action_for_gesture">Choose action for %s</string>
    <string name="device_admin_active">Device admin active</string>
    <string name="device_admin_inactive">Device admin required for screen lock</string>
    <string name="folder_behavior">Folder behavior</string>
    <string name="feedback_and_permissions">Feedback &amp; permissions</string>
    <string name="backup_and_restore">Backup &amp; restore</string>
    <string name="backup_settings_and_layout">Backup settings &amp; layout</string>
    <string name="backup_settings_desc">Export home screen, gestures, and settings to a JSON file</string>
    <string name="restore_settings_and_layout">Restore settings &amp; layout</string>
    <string name="restore_settings_desc">Import previously saved backup file</string>
    <string name="backup_created_successfully">Backup created successfully</string>
    <string name="backup_failed">Failed to create backup</string>
    <string name="backup_restored_successfully">Backup restored successfully</string>
    <string name="restore_failed">Failed to restore backup</string>
    <string name="restore_confirm_title">Restore backup?</string>
    <string name="restore_confirm_message">This will replace your current home screen layout, gestures, and launcher settings with the backup. Continue?</string>
    <string name="restoring">Restoring…</string>
    <!--
        Haven't found some strings? There's more at
        https://github.com/FossifyOrg/Commons/tree/master/commons/src/main/res
    -->
    <!-- CI trigger: log keeper PR verification -->
</resources>
